Feature/373 npm support (#391)
* #373: Support for NPM projects.
* fixed serialization / dezserialization of MavenProjectCrawler
* Use dedicated type DEV for devDependencies

Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>